# FsCopilot

./: .gitignore  FsCopilot.sln  LICENSE  readme.md
Definitions/: ASOBO_C172SP_G1000.yaml  COWS_DA40NG.yaml  COWS_DA40XLS.yaml  COWS_DA42VI.yaml  FNX_32X.yaml  FlyByWire_A380_842.yaml  FlyByWire_A380_842_Instrument.yaml  FlyByWire_A380_842_Pedestal.yaml  TFDi_Design_MD-11.yaml  WBSIM_C172SP_Classic.yaml
Definitions/modules/: AS_G1000_NXi.yaml  AS_GNS430.yaml  FSDT_GSX.yaml  fuel.yaml  payload.yaml
FsCopilot/: App.axaml  App.axaml.cs  FsCopilot.csproj  GlobalUsings.cs  Icons.axaml  ObservableExtensions.cs  Program.cs  Random.cs  UiSounds.cs  ValueConverters.cs  ViewLocator.cs  app.manifest
FsCopilot.Bridge/: fs-copilot.xml  readme.md
FsCopilot.Bridge.Wasm/: .clang-format  CMakeLists.txt  FsCopilotWasm.sln  FsCopilotWasm.vcxproj  interpolators.h  protocol.h  stream_buffer.h  time_shift.h  var_watcher.h  wasm_module.cpp  wasm_module.h
FsCopilot.Bridge/PackageDefinitions/: fscopilot-bridge.xml  p42-interop-example.xml
FsCopilot.Discovery/: FsCopilot.Discovery.csproj  LegacyHost.cs  LiteHost.cs  Program.cs  Relay.cs  RelayOptions.cs  RelayStunServer.cs  Stun.cs  StunBeta.cs  StunRc1.cs  UdpHost.cs  readme.md
FsCopilot.Discovery/Properties/: launchSettings.json
FsCopilot/Connection/: BehaviorControl.cs  Interact.cs  JsonExtensions.cs  SimClient.cs  SimConfig.cs  SimConnectClient.cs  SimConnectConsumer.cs  SimConnectExtensions.cs  SimConnectHeadless.cs  SimConnectProducer.cs  SimVarAttribute.cs  WaitHandleExtensions.cs
FsCopilot/Definitions/: COWS_DA40NG.yaml  (+9 more)
(+68 files in other folders)
